--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "common-shakeify": "^0.6.2",
     "envify": "^4.1.0",
     "exorcist": "^1.0.1",
-    "fake-indexeddb": "^2.1.1",
+    "fake-indexeddb": "^3.0.0",
+    "fast-json-patch": "^3.0.0-1",
     "lerna": "^3.21.0",
+    "ramda": "^0.27.0",
     "redux-mock-store": "^1.5.4",
     "source-map": "^0.7.3",
     "terser": "^3.17.0",
+    "union-type": "github:ptgolden/union-type",
     "watchify": "^3.11.1"
   },
   "browserify": {
