--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "envify": "^4.1.0",
     "exorcist": "^1.0.1",
     "fake-indexeddb": "^3.0.0",
-    "fast-json-patch": "^3.0.0-1",
+    "fast-json-patch": "^2.2.1",
     "lerna": "^3.21.0",
     "ramda": "^0.27.0",
     "redux-mock-store": "^1.5.4",
