--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -22,9 +22,14 @@
     "n3": "^1.3.7",
     "nanostate": "^1.2.1",
     "natsort": "^1.0.6",
+    "org-async-actions": "^1.0.0",
     "org-n3-utils": "^2.0.1",
     "org-shell": "^6.0.4",
     "parse-link-header": "^1.0.1",
+    "periodo-common": "^1.0.0",
+    "periodo-date-parser": "^1.0.1",
+    "periodo-ui": "^1.1.0",
+    "periodo-utils": "^5.0.0",
     "promise-worker": "^2.0.1",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.0",
