Use symlinks instead of Lerna

--- a/modules/org-async-actions/package.json
+++ b/modules/org-async-actions/package.json
@@ -6,8 +6,9 @@
   "keywords": [],
   "author": "Patrick Golden <ptgolden@email.unc.edu>",
   "license": "CC0",
-  "dependencies": {
-    "ramda": "^0.27.0",
-    "union-type": "github:ptgolden/union-type"
+  "browserify": {
+    "transform": [
+      "envify"
+    ]
   }
 }
