--- a/package.json
+++ b/package.json
@@ -14,15 +14,66 @@
   "bugs": {
     "url": "https://github.com/periodo/periodo-client/issues"
   },
+  "dependencies": {
+    "clean-tag": "^1.1.0",
+    "d3": "^5.16.0",
+    "debounce": "^1.2.0",
+    "dexie": "^3.0.1",
+    "diff-match-patch": "^1.0.5",
+    "earth-mesh": "^2.1.0",
+    "fast-json-patch": "^2.2.1",
+    "fastclick": "^1.0.6",
+    "file-saver": "^2.0.2",
+    "glsl-hsl2rgb": "^1.1.0",
+    "glslify": "^7.0.0",
+    "identifiers-doi": "^0.2.1",
+    "is-url": "^1.2.4",
+    "json-pointer": "^0.6.0",
+    "json-stable-stringify": "^1.0.1",
+    "jsonld": "^3.1.1",
+    "language-tags": "^1.0.5",
+    "linkify-it": "^3.0.2",
+    "lov-ns": "^1.1.1",
+    "mixmap": "github:periodo/mixmap",
+    "n3": "^1.3.7",
+    "nanostate": "^1.2.1",
+    "natsort": "^1.0.6",
+    "open-color": "1.7.0",
+    "org-n3-utils": "^2.0.1",
+    "org-shell": "^6.0.4",
+    "parse-link-header": "^1.0.1",
+    "promise-worker": "^2.0.1",
+    "prop-types": "^15.7.2",
+    "ramda": "^0.27.0",
+    "react": "^16.13.1",
+    "react-aria-menubutton": "^6.3.0",
+    "react-autosuggest": "^10.0.2",
+    "react-compound-slider": "^2.5.0",
+    "react-dom": "^16.13.1",
+    "react-hyperscript": "github:periodo/react-hyperscript",
+    "react-redux": "^7.2.0",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
+    "redux": "^4.0.5",
+    "regl": "^1.5.0",
+    "resl": "^1.0.3",
+    "respin": "^1.0.1",
+    "shallow-equal": "^1.2.1",
+    "spark-md5": "^3.0.1",
+    "styled-components": "^3.4.10",
+    "styled-system": "^2.3.6",
+    "system-components": "^2.2.3",
+    "transliteration": "2.1.11",
+    "union-type": "github:ptgolden/union-type",
+    "webworkify": "^1.5.0"
+  },
   "devDependencies": {
     "blue-tape": "^1.0.0",
     "browserify": "^16.5.1",
-    "common-shakeify": "^0.6.2",
     "envify": "^4.1.0",
     "exorcist": "^1.0.1",
     "fake-indexeddb": "^3.0.0",
     "fast-json-patch": "^2.2.1",
-    "lerna": "^3.21.0",
     "ramda": "^0.27.0",
     "redux-mock-store": "^1.5.4",
     "source-map": "^0.7.3",
@@ -32,8 +83,7 @@
   },
   "browserify": {
     "transform": [
-      "envify",
-      "common-shakeify"
+      "envify"
     ]
   },
   "scripts": {
