--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -5,48 +5,9 @@
   "description": "React application for browsing and editing PeriodO data",
   "main": "src/index.js",
   "license": "CC0",
-  "dependencies": {
-    "d3": "^5.16.0",
-    "debounce": "^1.2.0",
-    "dexie": "^3.0.1",
-    "fast-json-patch": "^2.2.1",
-    "fastclick": "^1.0.6",
-    "file-saver": "^2.0.2",
-    "identifiers-doi": "^0.2.1",
-    "is-url": "^1.2.4",
-    "json-pointer": "^0.6.0",
-    "json-stable-stringify": "^1.0.1",
-    "jsonld": "^3.1.1",
-    "language-tags": "^1.0.5",
-    "lov-ns": "^1.1.1",
-    "n3": "^1.3.7",
-    "nanostate": "^1.2.1",
-    "natsort": "^1.0.6",
-    "org-async-actions": "^1.0.0",
-    "org-n3-utils": "^2.0.1",
-    "org-shell": "^6.0.4",
-    "parse-link-header": "^1.0.1",
-    "periodo-common": "^1.0.0",
-    "periodo-date-parser": "^1.0.1",
-    "periodo-ui": "^1.1.0",
-    "periodo-utils": "^5.0.0",
-    "promise-worker": "^2.0.1",
-    "prop-types": "^15.7.2",
-    "ramda": "^0.27.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-hyperscript": "github:periodo/react-hyperscript",
-    "react-redux": "^7.2.0",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.5",
-    "redux": "^4.0.5",
-    "respin": "^1.0.1",
-    "shallow-equal": "^1.2.1",
-    "spark-md5": "^3.0.1",
-    "styled-components": "^3.4.10",
-    "styled-system": "^2.3.6",
-    "transliteration": "2.1.11",
-    "union-type": "github:ptgolden/union-type",
-    "webworkify": "^1.5.0"
+  "browserify": {
+    "transform": [
+      "envify"
+    ]
   }
 }
