--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "url": "https://github.com/periodo/periodo-client/issues"
   },
   "dependencies": {
-    "clean-tag": "^1.1.0",
+    "@emotion/styled": "^10.0.27",
+    "@rebass/preset": "^4.0.5",
     "d3": "^5.16.0",
     "debounce": "^1.2.0",
     "dexie": "^3.0.1",
     "diff-match-patch": "^1.0.5",
     "earth-mesh": "^2.1.0",
+    "emotion-theming": "^10.0.27",
     "fast-json-patch": "^2.2.1",
     "fastclick": "^1.0.6",
     "file-saver": "^2.0.2",
@@ -54,15 +56,14 @@
     "react-redux": "^7.2.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
+    "rebass": "^4.0.7",
     "redux": "^4.0.5",
     "regl": "^1.5.0",
     "resl": "^1.0.3",
     "respin": "^1.0.1",
     "shallow-equal": "^1.2.1",
     "spark-md5": "^3.0.1",
-    "styled-components": "^3.4.10",
-    "styled-system": "^2.3.6",
-    "system-components": "^2.2.3",
+    "styled-system": "^5.1.5",
     "transliteration": "2.1.11",
     "union-type": "github:ptgolden/union-type",
     "webworkify": "^1.5.0"
