--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "ramda": "^0.27.0",
     "redux-mock-store": "^1.5.4",
     "source-map": "^0.7.3",
+    "tape": "^5.0.1",
     "terser": "^4.7.0",
     "union-type": "github:ptgolden/union-type",
     "watchify": "^3.11.1"
