--- a/modules/periodo-ui/package.json
+++ b/modules/periodo-ui/package.json
@@ -10,34 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "clean-tag": "^1.1.0",
-    "debounce": "^1.2.0",
-    "diff-match-patch": "^1.0.5",
-    "earth-mesh": "^2.1.0",
-    "fast-json-patch": "^2.2.1",
-    "glslify": "^7.0.0",
-    "language-tags": "^1.0.5",
-    "linkify-it": "^3.0.2",
-    "mixmap": "github:periodo/mixmap",
-    "open-color": "1.7.0",
-    "org-shell": "^6.0.4",
-    "periodo-common": "^1.0.0",
-    "periodo-utils": "^5.0.0",
-    "ramda": "^0.27.0",
-    "react": "^16.13.1",
-    "react-aria-menubutton": "^6.3.0",
-    "react-autosuggest": "^10.0.2",
-    "react-compound-slider": "^2.5.0",
-    "react-dom": "^16.13.1",
-    "react-hyperscript": "github:periodo/react-hyperscript",
-    "regl": "^1.5.0",
-    "resl": "^1.0.3",
-    "styled-components": "^3.4.10",
-    "styled-system": "^2.3.6",
-    "system-components": "^2.2.3",
-    "union-type": "github:ptgolden/union-type"
-  },
+  "dependencies": {},
   "browserify": {
     "transform": [
       "glslify"
