--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "exorcist": "^1.0.1",
     "fake-indexeddb": "^3.0.0",
     "fast-json-patch": "^2.2.1",
+    "pegjs": "^0.10.0",
     "ramda": "^0.27.0",
     "redux-mock-store": "^1.5.4",
     "source-map": "^0.7.3",
