add missing comma

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -11,6 +11,6 @@ jobs:
             owner: 'periodo',
             repo: 'periodo-tests',
             workflow_id: 'run-tests-on-branch.yml',
-            ref: 'master'
+            ref: 'master',
             inputs: { clientBranch: '${{ env.GITHUB_REF_NAME }}' }
           })
