--- a/.github/workflows/run-end-to-end-tests.yml
+++ b/.github/workflows/run-end-to-end-tests.yml
@@ -1,7 +1,7 @@
 name: end-to-end tests
 on: [push]
 jobs:
-  dispatch:
+  dispatch-and-wait:
     runs-on: ubuntu-latest
     steps:
     - run: echo "Dispatching end-to-end tests against $GITHUB_REF_NAME"
