--- a/.github/workflows/run-end-to-end-tests.yml
+++ b/.github/workflows/run-end-to-end-tests.yml
@@ -19,6 +19,7 @@ jobs:
           { "client_branch": "${{  github.ref_name }}" }
     - run: echo 'Workflow log at https://github.com/periodo/periodo-tests/actions/runs/${{ steps.dispatch.outputs.run-id }}'
     - name: "Wait for workflow completion"
+      id: wait
       uses: mathze/workflow-dispatch-action@v1
       with:
         owner: periodo
@@ -27,3 +28,6 @@ jobs:
         token: ${{ secrets.WORKFLOW_DISPATCH_TOKEN }}
         run-id: ${{ steps.dispatch.outputs.run-id }}
         fail-on-error: true
+    - run: echo 'End-to-end tests failure is ${{ steps.wait.outputs.failed }}'
+    - run: echo '  status is ${{ steps.wait.outputs.run-status }}'
+    - run: echo '  conclusion is ${{ steps.wait.outputs.run-conclusion }}'
