add check results step

--- a/.github/workflows/run-end-to-end-tests.yml
+++ b/.github/workflows/run-end-to-end-tests.yml
@@ -28,4 +28,15 @@ jobs:
         token: ${{ secrets.WORKFLOW_DISPATCH_TOKEN }}
         run-id: ${{ steps.dispatch.outputs.run-id }}
         fail-on-error: true
-    - run: echo 'End-to-end tests failure is ${{ steps.wait.outputs.failed }}, status is ${{ steps.wait.outputs.run-status }}, conclusion is ${{ steps.wait.outputs.run-conclusion }}'
+    - name: "Check result"
+      run: |
+        if [[ "completed" != "${{ steps.wait.outputs.run-status }}" ]] ||
+           [[ "failure" != "${{ steps.wait.outputs.run-conclusion }}" ]] ||
+           [[ false -ne ${{ steps.wait.outputs.failed }} ]]; then
+           echo "Run-Status should be <completed> but was <${{ steps.wait.outputs.run-status }}>"
+           echo "Run-Conclusion should be <failure> but was <${{ steps.wait.outputs.run-conclusion }}>"
+           echo "Failed should be <false> but was <${{ steps.wait.outputs.failed }}>"
+           exit 1
+        else
+          echo "Checks passed"
+        fi
