--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "spark-md5": "^3.0.1",
     "styled-system": "^5.1.5",
     "transliteration": "2.2.0",
-    "union-type": "github:ptgolden/union-type",
+    "union-type": "github:periodo/union-type",
     "webworkify": "^1.5.0"
   },
   "devDependencies": {
@@ -78,7 +78,6 @@
     "redux-mock-store": "^1.5.4",
     "source-map": "^0.7.3",
     "terser": "^5.14.0",
-    "union-type": "github:ptgolden/union-type",
     "watchify": "^4.0.0"
   },
   "browserify": {
